# flapmapp-assignment

./: .gitignore  README.md  package-lock.json  package.json
android/: build.gradle  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_final.txt  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/cvgl/: CVGLRenderer.kt  MainActivity.kt  StreamClient.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml
web/: index.html  package.json
web/src/: index.ts  main.ts
